--- a/160407_fizra-style.css
+++ b/160407_fizra-style.css
@@ -61,9 +61,12 @@ li:first-child {
 	top: -35px;
 	left: -20px;
 }
-.social {
+div a {
 	padding: 0px 8px;
 	color: black;
+}
+p a {
+	padding: 0px;
 }
 #abouttext {
 	position: relative;
